--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "antd": "^4.15.0",
+    "axios": "^0.21.1",
     "markdown-navbar": "^1.4.3",
     "next": "10.1.2",
     "react": "17.0.2",
