--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "@ant-design/icons": "^4.6.2",
     "antd": "^4.15.0",
     "axios": "^0.21.1",
+    "highlight.js": "^10.7.2",
+    "lodash": "^4.17.21",
     "markdown-navbar": "^1.4.3",
+    "marked": "^2.0.2",
     "next": "10.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-markdown": "^5.0.3",
-    "react-syntax-highlighter": "^15.4.3",
-    "remark-gfm": "^1.0.0"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "babel-plugin-import": "^1.13.3"
